# Algos_Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
Adventofcode/2020/: Cargo.toml
Algoexpert/Easy/: Cargo.toml
Algoexpert/easy/: Cargo.toml
Algoexpert/medium/: Cargo.toml
Books/hands_on_data_structures/: Cargo.toml
CodeWars/: Cargo.toml
CodeWars/5kyu/gap_in_primes/: Cargo.toml
CodeWars/5kyu/gap_in_primes/src/: main.rs
CodeWars/6kyu/Schrödinger's_Boolean/: Cargo.toml
CodeWars/6kyu/Schrödinger's_Boolean/src/: main.rs
CodeWars/6kyu/bystate/: Cargo.toml
CodeWars/6kyu/bystate/src/: main.rs
CodeWars/6kyu/digital_cypher_vol_3_missing_key/: Cargo.toml
CodeWars/6kyu/digital_cypher_vol_3_missing_key/src/: main.rs
CodeWars/6kyu/easy_diagonal/: Cargo.toml
CodeWars/6kyu/easy_diagonal/src/: main.rs
CodeWars/6kyu/float_point_approx/: Cargo.toml
CodeWars/6kyu/float_point_approx/src/: main.rs
CodeWars/6kyu/position_average/: Cargo.toml
CodeWars/6kyu/position_average/src/: main.rs
CodeWars/6kyu/rainfall/: Cargo.toml
CodeWars/6kyu/rainfall/src/: main.rs
CodeWars/6kyu/reducing_by_steps/: Cargo.toml
CodeWars/6kyu/reducing_by_steps/src/: main.rs
CodeWars/6kyu/steps_in_primes/: Cargo.toml
CodeWars/6kyu/steps_in_primes/src/: main.rs
CodeWars/7kyu/exex_and_ohs/: Cargo.toml
CodeWars/7kyu/exex_and_ohs/src/: main.rs
CodeWars/7kyu/form_the_minimum/: Cargo.toml
CodeWars/7kyu/form_the_minimum/src/: main.rs
CodeWars/7kyu/mumbling/: Cargo.toml
CodeWars/7kyu/mumbling/src/: main.rs
CodeWars/7kyu/string_ends_with?/: Cargo.toml
CodeWars/7kyu/string_ends_with?/src/: main.rs
CodeWars/7kyu/sum_odd_numbers/: Cargo.toml
CodeWars/7kyu/sum_odd_numbers/src/: main.rs
CodeWars/8kyu/bool_to_str/: Cargo.toml
CodeWars/8kyu/bool_to_str/src/: main.rs
CodeWars/8kyu/calculate_bmi/: Cargo.toml
CodeWars/8kyu/calculate_bmi/src/: main.rs
CodeWars/8kyu/remove_string_spaces/: Cargo.toml
CodeWars/8kyu/remove_string_spaces/src/: main.rs
CodeWars/kyu_5/: Cargo.toml
CodeWars/kyu_5/src/: gap_in_primes.rs
CodeWars/kyu_6/: Cargo.toml
CodeWars/kyu_6/src/: easy_diagonal.rs  float_point_approx.rs  position_average.rs  reducing_by_steps.rs
CodeWars/kyu_7/: Cargo.toml
CodeWars/kyu_7/src/: exes_and_ohs.rs  form_the_minimum.rs  main.rs  mumbling.rs  string_ends_with.rs  sum_odd_numbers.rs
CodeWars/kyu_8/: Cargo.toml
CodeWars/kyu_8/src/: bool_to_str.rs  calculate_bmi.rs  main.rs  remove_string_spaces.rs
LeetCode/: .gitignore  Cargo.toml
LeetCode/Easy/: Cargo.toml
LeetCode/Easy/docs/: defanging-an-ip-address.md  kids_with_the_greatest_number_of_candies.md
LeetCode/Easy/src/: abbreviation.rs  backspace_string_compare.rs  best_time_to_buy_and_sell_stock.rs  best_time_to_buy_and_sell_stock_2.rs  bin_search.rs  binary_substrings.rs  can_place_flowers.rs  contains_duplicates.rs  decompress_run_length_encoded_list.rs  defanging_an_ip_address.rs  degree_on_an_array.rs  diameter_of_binary_tree.rs  even_number_of_digits.rs  find_first_and_last_position.rs  find_smallest_letter.rs  first_bad_version.rs  first_unique_char.rs  guess_number.rs  happy_number.rs  how_many_numbers_are_smaller.rs  intersection_of_two_arrays.rs  kids_with_the_greatest_number_of_candies.rs  last_stone_weight.rs  lib.rs  logger_rate_limiter.rs  longest_prefix.rs  main.rs  majority_element.rs  maximum_subarray.rs  maximum_units_on_a_truck.rs  merge_sorted_array.rs  merge_two_sorted_lists.rs  middle_of_the_linked_list.rs  min_stack.rs  move_zeros.rs  moving_avg.rs  num_jewels_in_stones.rs  number_of_steps.rs  palindrome.rs  palindrome_2.rs  (+14 more)
LeetCode/Hard/: Cargo.toml
advent_of_code/2020/: Cargo.toml
advent_of_code/2020/data/: day6.txt
advent_of_code/2023/: Cargo.toml
hackers_delight/: Cargo.toml
intro_to_algos/: Cargo.toml
(+228 files in other folders)
