[package]
name = "CodeWars"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "7kyu/exex_and_ohs",
    "8kyu/calculate_bmi",
    "8kyu/remove_string_spaces",
    "6kyu/Schrödinger's_Boolean"
]