[package]
name = "CodeWars"
version = "0.1.0"
authors = ["Valery Piashchynski <piashchynski_valery@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "8kyu/calculate_bmi",
    "8kyu/remove_string_spaces",
    "8kyu/bool_to_str",
    "7kyu/exex_and_ohs",
    "7kyu/mumbling",
    "7kyu/sum_odd_numbers",
    "7kyu/string_ends_with?",
    "7kyu/form_the_minimum",
    "6kyu/Schrödinger's_Boolean",
    "6kyu/easy_diagonal",
    "6kyu/digital_cypher_vol_3_missing_key",
    "6kyu/reducing_by_steps",
    "6kyu/float_point_approx",
    "6kyu/position_average",
    "6kyu/bystate",
    "6kyu/rainfall",
    "5kyu/gap_in_primes",
]